avoid horizontal scroll on notifications

--- a/src/styles/base.sass
+++ b/src/styles/base.sass
@@ -924,6 +924,7 @@ label, label.control-label
 		width: 420px
 		max-height: 1000%
 		border-top-color: white
+		overflow-x: hidden
 
 
 /* Font aliases */
